$Id: NEWS,v 1.102 2006/07/30 13:19:49 rocky Exp $

version 0.78cvs
=====================================
- add mmc-tool
- add mmc-close-tray
- libudf: can now read (extract) file data, at least for ICB strategy 
          type 4.
- libcdio is starting to get updated for UTF-8 support. Strings,
  which are guaranteed to be in UTF-8, are returned as a new type
  cdio_utf8_t, which is typedef'd to char.
  
version 0.77
=====================================
2006-03-17

- Add an object-oriented C++ wrapper. (libcdio++ and libiso9660++)

- replace libpopt with getopt in cd-drive, cd-info, iso-info, iso-read
  (Peter J. Creath)

- Document cd-paranoia (Peter J. Creath)

- Add cdio_eject_media_drive().

- Add more generic read_sectors() 

- Document that NULL also uses default drive in close_tray, cdio_open
  and cdio_open_am. Document b_mode2 paramenter not used in cdio ISO
  read.

- Some provision for handling Rock-Ridge device numbers.

- block read routines return success if asked to read 0 blocks.

- Start UDF handling

- increase use of enumerations more and decrease use of #defines

- OS Support: 
    DragonFly recognized as FreeBSD, 
    MinGW better tolerated,
    GNU/Linux (and others?) LARGEFILE support
    OpenBSD tested (no native CD driver though)

- Doxygen formatting improvements.

- Misc bugs: 
  * fixed bincue driver caused core dump on set_speed and 
    set_blocksize; it also called the wrong routine (from NRG) to get a
    list of cd-images. 
  * read.h didn't make sure off_t was defined. 
  * fixed bug in is_device() when driver_id = DRIVER_UNKNOWN or DRIVER_DEVICE.
  * OSX was freeing too much in listing drives. 
  * get_hwinfo was not respecting fixed-length field boundaries in 
    image drivers (strcpy->strncpy).
  * A number ISO 9660 time conversion routines corrected with respect to
    various timezone offsets, daylight savings time, and tm capabilities

- small cdda-player improvements - shows more CD-TEXT, and fix bug in